Adiciona uma linha horizontal entre as informações do cliente e a liderança técnica no portfólio para melhorar a separação visual e a legibilidade.

--- a/index.html
+++ b/index.html
@@ -366,9 +366,10 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> Centauro<br></li>
+                            <strong>Cliente:</strong> Centauro<br>
                             <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
                             <li><strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
