--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <ul>
                             <strong>Cliente:</strong> Centauro<br>
                             <br>
-                            <li><strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos</li>
+                            <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
                             <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
