Adds a horizontal line between client information and results in the portfolio to enhance visual separation and improve readability.

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                         <p class="project-description">
                         </p>
                         <ul>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
                             <strong>Cliente:</strong> Centauro<br>
                             <br>
                             <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
