Enhances project descriptions in the portfolio by adding horizontal lines for better visual separation between client information and results, improving overall readability and formatting.

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             <strong>Cliente:</strong> Centauro<br>
                             <br>
                             <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <br>
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
@@ -392,8 +392,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> Centauro<br></li>
-                            <li><strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> Centauro<br>
+                            <br>
+                            <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
+                            <br>
                             <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
                             <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
                             <li><strong>Automação</strong> de pipelines ETL/ELT</li>
@@ -415,8 +418,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> Centauro<br></li>
-                            <li><strong>Resultado:</strong> Integração completa entre canais físicos e digitais</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> Centauro<br>
+                            <br>
+                            <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
+                            <br>
                             <li><strong>Data Lake</strong> corporativo unificado</li>
                             <li><strong>Pipelines</strong> de dados em tempo real</li>
                             <li><strong>Dashboards</strong> executivos integrados</li>
@@ -436,8 +442,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> SolFacil<br></li>
-                            <li><strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> SolFacil<br>
+                            <br>
+                            <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
+                            <br>
                             <li><strong>Implementação</strong> de estratégias de data masking em AWS</li>
                             <li><strong>Desenvolvimento</strong> de algoritmos de desmascaramento seletivo</li>
                             <li><strong>Integração</strong> com políticas de compliance (LGPD, GDPR)</li>
@@ -459,8 +468,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> SolFacil<br></li>
-                            <li><strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> SolFacil<br>
+                            <br>
+                            <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
+                            <br>
                             <li><strong>Desenvolvimento</strong> de CLI para análise de performance DBT</li>
                             <li><strong>Implementação</strong> de boas práticas de desenvolvimento</li>
                             <li><strong>Otimização</strong> de queries e modelos no AWS Redshift</li>
@@ -482,8 +494,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> SolFacil<br></li>
-                            <li><strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> SolFacil<br>
+                            <br>
+                            <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
+                            <br>
                             <li><strong>Implementação</strong> de técnicas de DataShare no AWS Redshift</li>
                             <li><strong>Otimização</strong> de distribuição de carga entre clusters</li>
                             <li><strong>Desenvolvimento</strong> de estratégias de particionamento</li>
@@ -505,8 +520,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> Mills<br></li>
-                            <li><strong>Resultado:</strong> Otimização de custos e governança financeira em cloud</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> Mills<br>
+                            <br>
+                            <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
+                            <br>
                             <li><strong>Implementação</strong> de estratégias de FinOps para Databricks</li>
                             <li><strong>Otimização</strong> de custos em AWS com monitoramento avançado</li>
                             <li><strong>Governança</strong> financeira e alocação de custos por projeto</li>
@@ -528,8 +546,11 @@
                         <p class="project-description">
                         </p>
                         <ul>
-                            <li><strong>Cliente:</strong> Mills<br></li>
-                            <li><strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados</li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
+                            <strong>Cliente:</strong> Mills<br>
+                            <br>
+                            <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
+                            <br>
                             <li><strong>Desenvolvimento</strong> de modelos de segmentação de clientes</li>
                             <li><strong>Implementação</strong> de dashboards executivos avançados</li>
                             <li><strong>Análise</strong> de comportamento e jornada do cliente</li>
