--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
             </h2>
             <div class="stats-container">
                 <div class="stat-card">
-                    <div class="stat-number" data-target="16">0</div>
+                    <div class="stat-number" data-target="20+">0</div>
                     <div class="stat-label">Anos de Experiência</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="7">0</div>
+                    <div class="stat-number" data-target="15+">0</div>
                     <div class="stat-label">Empresas Atendidas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="12">0</div>
+                    <div class="stat-number" data-target="16">0</div>
                     <div class="stat-label">Pessoas Lideradas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="35">0</div>
+                    <div class="stat-number" data-target="50+">0</div>
                     <div class="stat-label">Projetos Concluídos</div>
                 </div>
             </div>
