--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
                 <div class="project-card" data-category="modernization">
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> Centauro<br>
+                                <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
@@ -389,14 +389,14 @@
                 <div class="project-card" data-category="realtime">
                     <div class="project-content">
                         <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> Centauro<br>
+                                <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
                             <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
                             <li><strong>Automação</strong> de pipelines ETL/ELT</li>
@@ -415,14 +415,14 @@
                 <div class="project-card" data-category="omnichannel">
                     <div class="project-content">
                         <h3 class="project-title">Jornada Omnichannel</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> Centauro<br>
+                                <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Data Lake</strong> corporativo unificado</li>
                             <li><strong>Pipelines</strong> de dados em tempo real</li>
                             <li><strong>Dashboards</strong> executivos integrados</li>
@@ -439,14 +439,14 @@
                 <div class="project-card" data-category="security">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> SolFacil<br>
+                                <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Implementação</strong> de estratégias de data masking em AWS</li>
                             <li><strong>Desenvolvimento</strong> de algoritmos de desmascaramento seletivo</li>
                             <li><strong>Integração</strong> com políticas de compliance (LGPD, GDPR)</li>
@@ -465,14 +465,14 @@
                 <div class="project-card" data-category="performance">
                     <div class="project-content">
                         <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> SolFacil<br>
+                                <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Desenvolvimento</strong> de CLI para análise de performance DBT</li>
                             <li><strong>Implementação</strong> de boas práticas de desenvolvimento</li>
                             <li><strong>Otimização</strong> de queries e modelos no AWS Redshift</li>
@@ -491,14 +491,14 @@
                 <div class="project-card" data-category="distribution">
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> SolFacil<br>
+                                <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Implementação</strong> de técnicas de DataShare no AWS Redshift</li>
                             <li><strong>Otimização</strong> de distribuição de carga entre clusters</li>
                             <li><strong>Desenvolvimento</strong> de estratégias de particionamento</li>
@@ -517,14 +517,14 @@
                 <div class="project-card" data-category="finops">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> Mills<br>
-                            <br>
-                            <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> Mills<br>
+                                <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Implementação</strong> de estratégias de FinOps para Databricks</li>
                             <li><strong>Otimização</strong> de custos em AWS com monitoramento avançado</li>
                             <li><strong>Governança</strong> financeira e alocação de custos por projeto</li>
@@ -543,14 +543,14 @@
                 <div class="project-card" data-category="analytics">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Analytics de Clientes</h3>
-                        <p class="project-description">
-                        </p>
-                        <ul>
-                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
-                            <strong>Cliente:</strong> Mills<br>
-                            <br>
-                            <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
-                            <br>
+                        <div class="project-header">
+                            <hr class="project-divider">
+                            <div class="project-info">
+                                <strong>Cliente:</strong> Mills<br>
+                                <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
+                            </div>
+                        </div>
+                        <ul class="project-details">
                             <li><strong>Desenvolvimento</strong> de modelos de segmentação de clientes</li>
                             <li><strong>Implementação</strong> de dashboards executivos avançados</li>
                             <li><strong>Análise</strong> de comportamento e jornada do cliente</li>
