Adicionada quebra de linha após Resultado em todos os cards de projetos - Melhoria na legibilidade e organização visual

--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
                                 <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
@@ -396,6 +397,7 @@
                                 <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
                             <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
@@ -422,6 +424,7 @@
                                 <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Data Lake</strong> corporativo unificado</li>
                             <li><strong>Pipelines</strong> de dados em tempo real</li>
@@ -438,7 +441,7 @@
                 </div>
                 <div class="project-card" data-category="security">
                     <div class="project-content">
-                        <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
+                        <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados</h3>
                         <div class="project-header">
                             <hr class="project-divider">
                             <div class="project-info">
@@ -446,6 +449,7 @@
                                 <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Implementação</strong> de estratégias de data masking em AWS</li>
                             <li><strong>Desenvolvimento</strong> de algoritmos de desmascaramento seletivo</li>
@@ -472,6 +476,7 @@
                                 <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Desenvolvimento</strong> de CLI para análise de performance DBT</li>
                             <li><strong>Implementação</strong> de boas práticas de desenvolvimento</li>
@@ -498,6 +503,7 @@
                                 <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Implementação</strong> de técnicas de DataShare no AWS Redshift</li>
                             <li><strong>Otimização</strong> de distribuição de carga entre clusters</li>
@@ -524,6 +530,7 @@
                                 <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Implementação</strong> de estratégias de FinOps para Databricks</li>
                             <li><strong>Otimização</strong> de custos em AWS com monitoramento avançado</li>
@@ -550,6 +557,7 @@
                                 <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
                             </div>
                         </div>
+                        <br>
                         <ul class="project-details">
                             <li><strong>Desenvolvimento</strong> de modelos de segmentação de clientes</li>
                             <li><strong>Implementação</strong> de dashboards executivos avançados</li>
