Adds new skills to the portfolio: Spark and FinOps, and introduces a new Databases section with various database technologies. Updates project leadership details and enhances project results descriptions for clarity.

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                     <h4><i class="fas fa-laptop-code"></i> Programming & Languages</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-secondary">Python</span></li>
+                        <li><span class="badge badge-secondary">Spark</span></li>
                         <li><span class="badge badge-secondary">SQL</span></li>
                         <li><span class="badge badge-secondary">PL/SQL</span></li>
                         <li><span class="badge badge-secondary">Transact-SQL</span></li>
@@ -340,6 +341,7 @@
                         <li><span class="badge badge-danger">Data Mesh</span></li>
                         <li><span class="badge badge-danger">Microservices</span></li>
                         <li><span class="badge badge-danger">Event-Driven</span></li>
+                        <li><span class="badge badge-danger">FinOps</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -348,6 +350,17 @@
                         <li><span class="badge badge-info">Google Cloud AI/ML</span></li>
                         <li><span class="badge badge-info">Machine Learning</span></li>
                         <li><span class="badge badge-info">Data Science</span></li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4><i class="fas fa-brain"></i> Databases</h4>
+                    <ul class="skill-list">
+                        <li><span class="badge badge-info">Oracle</span></li>
+                        <li><span class="badge badge-info">SQL Server</span></li>
+                        <li><span class="badge badge-info">IBM Informix</span></li>
+                        <li><span class="badge badge-info">MySQL</span></li>
+                        <li><span class="badge badge-info">PostgreSQL</span></li>
+                        <li><span class="badge badge-info">MongoDB</span></li>
                     </ul>
                 </div>
             </div>
@@ -373,7 +386,7 @@
                         </div>
                         <br>
                         <ul class="project-details">
-                            <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
+                            <li><strong>Liderança técnica</strong> de equipe de 15 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
                             <li><strong>Redução de 40%</strong> nos custos de infraestrutura</li>
@@ -381,9 +394,6 @@
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-primary">AWS</span>
-                            <span class="badge badge-success">Snowflake</span>
-                            <span class="badge badge-warning">Apache Airflow</span>
-                            <span class="badge badge-info">Power BI</span>
                         </div>
                     </div>
                 </div>
@@ -409,9 +419,7 @@
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-success">Apache Kafka</span>
-                            <span class="badge badge-success">Confluent</span>
-                            <span class="badge badge-success">Databricks</span>
-                            <span class="badge badge-warning">dbt</span>
+                            <span class="badge badge-primary">AWS</span>
                         </div>
                     </div>
                 </div>
@@ -424,7 +432,7 @@
                             <div class="project-info">
                                 <strong>Cliente:</strong> Centauro<br>
                                 <br>
-                                <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
+                                <strong>Resultado:</strong> Aumento de 30% nas vendas devido à integração entre canais físicos e digitais
                             </div>
                         </div>
                         <br>
@@ -436,9 +444,6 @@
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-primary">AWS</span>
-                            <span class="badge badge-success">Snowflake</span>
-                            <span class="badge badge-info">Tableau</span>
-                            <span class="badge badge-secondary">Python</span>
                         </div>
                     </div>
                 </div>
@@ -463,9 +468,7 @@
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-primary">AWS</span>
-                            <span class="badge badge-success">Snowflake</span>
                             <span class="badge badge-secondary">Python</span>
-                            <span class="badge badge-danger">Security</span>
                         </div>
                     </div>
                 </div>
