--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="skill-category">
                     <h4><i class="fas fa-brain"></i> Databases</h4>
                     <ul class="skill-list">
-                        <li><span class="badge badge-info">Oracle</span></li>
+                        <li><span class="badge badge-danger">Oracle</span></li>
                         <li><span class="badge badge-info">SQL Server</span></li>
                         <li><span class="badge badge-info">IBM Informix</span></li>
                         <li><span class="badge badge-info">MySQL</span></li>
