Update badge colors in skill categories for improved visual distinction in the portfolio.

--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
                 <div class="skill-category">
                     <h4><i class="fas fa-chart-pie"></i> Analytics & Visualization</h4>
                     <ul class="skill-list">
-                        <li><span class="badge badge-info">Power BI</span></li>
-                        <li><span class="badge badge-info">Tableau</span></li>
-                        <li><span class="badge badge-info">Apache Superset</span></li>
+                        <li><span class="badge badge-light">Power BI</span></li>
+                        <li><span class="badge badge-light">Tableau</span></li>
+                        <li><span class="badge badge-light">Apache Superset</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -347,20 +347,20 @@
                 <div class="skill-category">
                     <h4><i class="fas fa-brain"></i> AI & Machine Learning Engineering</h4>
                     <ul class="skill-list">
-                        <li><span class="badge badge-info">Google Cloud AI/ML</span></li>
-                        <li><span class="badge badge-info">Machine Learning</span></li>
-                        <li><span class="badge badge-info">Data Science</span></li>
+                        <li><span class="badge badge-dark">Google Cloud AI/ML</span></li>
+                        <li><span class="badge badge-dark">Machine Learning</span></li>
+                        <li><span class="badge badge-dark">Data Science</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h4><i class="fas fa-brain"></i> Databases</h4>
                     <ul class="skill-list">
-                        <li><span class="badge badge-danger">Oracle</span></li>
-                        <li><span class="badge badge-info">SQL Server</span></li>
-                        <li><span class="badge badge-info">IBM Informix</span></li>
-                        <li><span class="badge badge-info">MySQL</span></li>
-                        <li><span class="badge badge-info">PostgreSQL</span></li>
-                        <li><span class="badge badge-info">MongoDB</span></li>
+                        <li><span class="badge badge-accent">Oracle</span></li>
+                        <li><span class="badge badge-accent">SQL Server</span></li>
+                        <li><span class="badge badge-accent">IBM Informix</span></li>
+                        <li><span class="badge badge-accent">MySQL</span></li>
+                        <li><span class="badge badge-accent">PostgreSQL</span></li>
+                        <li><span class="badge badge-accent">MongoDB</span></li>
                     </ul>
                 </div>
             </div>
