--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
                         <li><span class="badge badge-dark">Data Science</span></li>
                     </ul>
                 </div>
-                <div class="skill-category">
-                    <h4><i class="fas fa-brain"></i> Databases</h4>
+                                 <div class="skill-category">
+                     <h4><i class="fas fa-database"></i> Databases</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-accent">Oracle</span></li>
                         <li><span class="badge badge-accent">SQL Server</span></li>
