--- a/index.html
+++ b/index.html
@@ -309,9 +309,14 @@
                     <h4><i class="fas fa-sync"></i> ETL/ELT & Orchestration</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-warning">Apache Airflow</span></li>
+                        <li><span class="badge badge-warning">Airbyte</span></li>
                         <li><span class="badge badge-warning">dbt</span></li>
                         <li><span class="badge badge-warning">Talend</span></li>
                         <li><span class="badge badge-warning">Confluent Kafka</span></li>
+                        <li><span class="badge badge-warning">Integration Services</span></li>
+                        <li><span class="badge badge-warning">Oracle ODI</span></li>
+                        <li><span class="badge badge-warning">Fivetran</span></li>
+                        <li><span class="badge badge-warning">Apache NIFI</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -331,6 +336,9 @@
                         <li><span class="badge badge-secondary">PL/SQL</span></li>
                         <li><span class="badge badge-secondary">Transact-SQL</span></li>
                         <li><span class="badge badge-secondary">JavaScript</span></li>
+                        <li><span class="badge badge-secondary">CSS</span></li>
+                        <li><span class="badge badge-secondary">HTML</span></li>
+                        <li><span class="badge badge-secondary">Streamlit</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -342,6 +350,13 @@
                         <li><span class="badge badge-danger">Microservices</span></li>
                         <li><span class="badge badge-danger">Event-Driven</span></li>
                         <li><span class="badge badge-danger">FinOps</span></li>
+                        <li><span class="badge badge-danger">Git</span></li>
+                        <li><span class="badge badge-danger">Docker</span></li>
+                        <li><span class="badge badge-danger">Kubernetes</span></li>
+                        <li><span class="badge badge-danger">CI/CD</span></li>
+                        <li><span class="badge badge-danger">GitLab</span></li>
+                        <li><span class="badge badge-danger">GitHub</span></li>
+                        <li><span class="badge badge-danger">Jenkins</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
