--- a/index.html
+++ b/index.html
@@ -350,13 +350,6 @@
                         <li><span class="badge badge-danger">Microservices</span></li>
                         <li><span class="badge badge-danger">Event-Driven</span></li>
                         <li><span class="badge badge-danger">FinOps</span></li>
-                        <li><span class="badge badge-danger">Git</span></li>
-                        <li><span class="badge badge-danger">Docker</span></li>
-                        <li><span class="badge badge-danger">Kubernetes</span></li>
-                        <li><span class="badge badge-danger">CI/CD</span></li>
-                        <li><span class="badge badge-danger">GitLab</span></li>
-                        <li><span class="badge badge-danger">GitHub</span></li>
-                        <li><span class="badge badge-danger">Jenkins</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -376,6 +369,22 @@
                         <li><span class="badge badge-accent">MongoDB</span></li>
                         <li><span class="badge badge-accent">MySQL</span></li>
                         <li><span class="badge badge-accent">PostgreSQL</span></li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4><i class="fas fa-cloud"></i> Infrastructure as Code & DevOps</h4>
+                    <ul class="skill-list">
+                        <li><span class="badge badge-iac">Terraform</span></li>
+                        <li><span class="badge badge-iac">AWS CloudFormation</span></li>
+                        <li><span class="badge badge-iac">Ansible</span></li>
+                        <li><span class="badge badge-iac">Docker</span></li>
+                        <li><span class="badge badge-iac">Kubernetes</span></li>
+                        <li><span class="badge badge-iac">Jenkins</span></li>
+                        <li><span class="badge badge-iac">Git</span></li>
+                        <li><span class="badge badge-iac">GitHub</span></li>
+                        <li><span class="badge badge-iac">GitLab</span></li>
+                        <li><span class="badge badge-iac">CI/CD</span></li>
+                        <li><span class="badge badge-iac">Azure DevOps</span></li>
                     </ul>
                 </div>
             </div>
